--- a/Fixit8KyleKidder.project
+++ b/Fixit8KyleKidder.project
@@ -85,7 +85,7 @@
       "exetitle": "",
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "Calculator",
+      "firstform": "twoControls",
       "fontFamily": "system",
       "height": "",
       "homescreenTitle": "",
