Updated for loop and added calc reset button

--- a/Fixit8KyleKidder.project
+++ b/Fixit8KyleKidder.project
@@ -85,7 +85,7 @@
       "exetitle": "",
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "twoControls",
+      "firstform": "membership",
       "fontFamily": "system",
       "height": "",
       "homescreenTitle": "",
